{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 126,
  "lineage": "9984fcca-543e-0b4a-d80e-e35c6eb8e0c6",
  "resources": [
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "solix_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:689655353897:security-group/sg-00f1fdf58b1a82013",
            "description": "This security group built for SCDP dev environment coortinator node",
            "egress": [],
            "id": "sg-00f1fdf58b1a82013",
            "ingress": [],
            "name": "scdp_dev_cn_security_group",
            "name_prefix": "",
            "owner_id": "689655353897",
            "revoke_rules_on_delete": true,
            "tags": {
              "ApplicationID": "SOLIX",
              "CostCentre": "1122",
              "Description": "This security group built for SCDP dev environment coordinator node",
              "Environment": "dev",
              "Name": "scdp_dev_cn_security_group",
              "OUName": "none",
              "Owner": "mark_meyer@insigniafinancial.com.au",
              "Platform": "linux",
              "PowerMgt": "working-days-aest-7am-7pm-on-excluding-holidays",
              "Snapshot": "snapw",
              "patchGroup": "rhel8PatchGroup",
              "patchcyle": "NonProd"
            },
            "tags_all": {
              "ApplicationID": "SOLIX",
              "CostCentre": "1122",
              "Description": "This security group built for SCDP dev environment coordinator node",
              "Environment": "dev",
              "Name": "scdp_dev_cn_security_group",
              "OUName": "none",
              "Owner": "mark_meyer@insigniafinancial.com.au",
              "Platform": "linux",
              "PowerMgt": "working-days-aest-7am-7pm-on-excluding-holidays",
              "Snapshot": "snapw",
              "patchGroup": "rhel8PatchGroup",
              "patchcyle": "NonProd"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c84ac7c34110a6f7"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.private_vpc_id"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_outbound_rule_all_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allowing all traffic to outbound",
            "from_port": 0,
            "id": "sgrule-3980555302",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00f1fdf58b1a82013",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.private_vpc_id",
            "module.sg.aws_security_group.solix_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_rule_tcp_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "application_vpc",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.76.48.0/23"
            ],
            "description": "application_vpc",
            "from_port": 22,
            "id": "sgrule-4191516036",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00f1fdf58b1a82013",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.private_vpc_id",
            "module.sg.aws_security_group.solix_security_group"
          ]
        },
        {
          "index_key": "tooling_vpc",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.76.50.0/23"
            ],
            "description": "tooling_vpc",
            "from_port": 22,
            "id": "sgrule-110115709",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00f1fdf58b1a82013",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.private_vpc_id",
            "module.sg.aws_security_group.solix_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_rule_tcp_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "IFL",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.16.0.0/12"
            ],
            "description": "IFL",
            "from_port": 443,
            "id": "sgrule-821151470",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00f1fdf58b1a82013",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.private_vpc_id",
            "module.sg.aws_security_group.solix_security_group"
          ]
        },
        {
          "index_key": "Internal_comm and alb",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.76.48.0/23"
            ],
            "description": "Internal_comm and alb",
            "from_port": 443,
            "id": "sgrule-2703658249",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00f1fdf58b1a82013",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.private_vpc_id",
            "module.sg.aws_security_group.solix_security_group"
          ]
        },
        {
          "index_key": "share aws workload to sccm",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.78.0.0/16"
            ],
            "description": "share aws workload to sccm",
            "from_port": 443,
            "id": "sgrule-1309082010",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00f1fdf58b1a82013",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.private_vpc_id",
            "module.sg.aws_security_group.solix_security_group"
          ]
        },
        {
          "index_key": "share non-prod to sccm",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.76.0.0/16"
            ],
            "description": "share non-prod to sccm",
            "from_port": 443,
            "id": "sgrule-2261113352",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00f1fdf58b1a82013",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.private_vpc_id",
            "module.sg.aws_security_group.solix_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_rule_tcp_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "access from local",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.16.0.0/12"
            ],
            "description": "access from local",
            "from_port": 80,
            "id": "sgrule-3315882832",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00f1fdf58b1a82013",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.private_vpc_id",
            "module.sg.aws_security_group.solix_security_group"
          ]
        },
        {
          "index_key": "lb",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.76.48.0/23"
            ],
            "description": "lb",
            "from_port": 80,
            "id": "sgrule-1416827063",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00f1fdf58b1a82013",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.private_vpc_id",
            "module.sg.aws_security_group.solix_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_rule_tcp_8531_sccm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "aws to sccm",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.78.0.0/16"
            ],
            "description": "aws to sccm",
            "from_port": 8531,
            "id": "sgrule-239590672",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00f1fdf58b1a82013",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8531,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.private_vpc_id",
            "module.sg.aws_security_group.solix_security_group"
          ]
        },
        {
          "index_key": "nonprod_sccm",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.76.0.0/16"
            ],
            "description": "nonprod_sccm",
            "from_port": 8531,
            "id": "sgrule-3330606722",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00f1fdf58b1a82013",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8531,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.private_vpc_id",
            "module.sg.aws_security_group.solix_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_rule_tcp_9091",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "application_vpc",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.76.48.0/23"
            ],
            "description": "application_vpc",
            "from_port": 9091,
            "id": "sgrule-1674570394",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00f1fdf58b1a82013",
            "self": false,
            "source_security_group_id": null,
            "to_port": 9091,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.private_vpc_id",
            "module.sg.aws_security_group.solix_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_rule_tcp_9443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "application_vpc",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.76.48.0/23"
            ],
            "description": "application_vpc",
            "from_port": 9443,
            "id": "sgrule-2802125452",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00f1fdf58b1a82013",
            "self": false,
            "source_security_group_id": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.private_vpc_id",
            "module.sg.aws_security_group.solix_security_group"
          ]
        }
      ]
    }
  ]
}